--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -246,4 +246,6 @@
     </div>
 {% endblock %}
 
-{% block scripts %}<script src="{% static 'js/poper.min.js' %}"></script>{% endblock %}
+{% block scripts %}
+  <script src="{% static 'js/poper.min.js' %}"></script>
+{% endblock %}
