--- a/app/templates/error/base.html
+++ b/app/templates/error/base.html
@@ -8,7 +8,7 @@
         <meta name="author" content="">
 
         <title>{% block title %}Document{% endblock title %}</title>
-        <link type="text/css" href="{% static 'css/error_page.css' %}" rel="stylesheet">
+        <link href="{% static 'css/error_page.css' %}" rel="stylesheet">
         {% block links %}
             <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
         {% endblock %}
@@ -18,7 +18,7 @@
         {% block content %}
             <h1>Something went wrong</h1>
         {% endblock %}
-        <!-- <script src="{% static 'js/error_page.js' %}"></script> -->
+        <script src="{% static 'js/error_page.js' %}"></script>
     </body>
     
 </html>
