up login, add permission, up errors

--- a/app/templates/app/startpage.html
+++ b/app/templates/app/startpage.html
@@ -10,7 +10,7 @@
         <h1 class="cover-heading"><a href="{% url 'home'%}">Home page.</a></h1>
         <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
         <p class="lead">
-            <a href="{% url 'signup'%}" class="btn btn-lg btn-secondary">Lets start</a>
+            <a href="{% url 'login'%}" class="btn btn-lg btn-secondary">Lets start</a>
         </p>
     </main>
 {% endblock %}
