--- a/app/templates/error/500.html
+++ b/app/templates/error/500.html
@@ -1,7 +1,7 @@
 {% extends 'error/base.html' %}
 
 {% block title %}
-    Page not found
+    Internal Server Error 500
 {% endblock title %}
     
 
@@ -19,7 +19,7 @@
                     <div class="clip"><div class="shadow"><span class="digit firstDigit"></span></div></div>
                     <div class="msg">OH!<span class="triangle"></span></div>
                 </div>
-                <h2 class="h1">500 Internal Server Error</h2>
+                <h2 class="h1">Internal Server Error 500</h2>
             </div>
         </div>
     </div>
