--- a/app/templates/app/startpage.html
+++ b/app/templates/app/startpage.html
@@ -7,7 +7,7 @@
 
 {% block page %}
     <main role="main" class="inner cover">
-        <h1 class="cover-heading"><a href="{% url 'home'%}">Home page.</a></h1>
+        <h1 class="cover-heading"><a href="{% url 'dashboard'%}">Home page.</a></h1>
         <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
         <p class="lead">
             <a href="{% url 'login'%}" class="btn btn-lg btn-secondary">Lets start</a>
