--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -52,6 +52,12 @@
                     Grades
                   </a>
                 </li>
+                <li class="nav-item">
+                    <a {% if location == 'calendar' %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{% url 'calendar' %}">
+                    <span data-feather="file"></span>
+                    Calendar
+                  </a>
+                </li>
               </ul>
             </div>
           </nav>
